# AllSecureC2

./: .gitignore  README.md  go.mod  go.sum  main.go  test.ps1  test_config.txt
ImplantSource/Agent/: Agent.sln  CMakeLists.txt  main.c
ImplantSource/Agent/Agent/: Agent.aps  Agent.rc  Agent.vcxproj  Agent.vcxproj.filters  Common.h  CreateAESKey.c  CreatePRNGState.c  Crypto.c  Crypto.h  EkkoSleepObf.c  EkkoSleepObf.h  EncryptAESKey.c  Helpers.h  Http.c  Http.h  HttpRequest.c  ListManager.c  ListManager.h  LoadResource.c  LoadResource.h  Operations.c  Operations.h  PerformRequest.c  Register.c  RegisterAgent.c  Resource.aps  RetAddrSpoof.c  SleepObfMain.c  SleepObfMain.h  TaskController.c  TaskController.h  agent.c  agent.h  enum.c  enum.h  evasive.c  evasive.h  implant.h  init.c  localcstd.c  (+12 more)
ImplantSource/Agent/Agent/TomCrypt/headers/: tomcrypt_custom.h
ImplantSource/Agent/Agent/wolfssl/: dh.c  hmac.c  misc.c  random.c  sha.c
ImplantSource/Agent/Agent/wolfssl/wolfcrypt/: aes.h  asn.h  dsa.h  md2.h  misc.h  pwdbased.h  random.h  rsa.h  sha256.h  wc_encrypt.h  wc_port.h
ImplantSource/Agent/Agent/x64/Debug/: Agent.exe.recipe  Agent.ilk  Agent.res  Agent.vcxproj.FileListAbsolute.txt  Agent.vcxproj.cppwinrt_comp.rsp  BreadSlice.exe.recipe  Resource.res  createaeskey.obj.enc  crypto.obj.enc  enum.obj.enc  evasive.obj.enc  http.obj.enc  package.obj.enc  parser.obj.enc  registeragent.obj.enc  taskcontroller.obj.enc  vc143.idb
ImplantSource/Agent/Agent/x64/Debug/Agent.tlog/: Agent.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
ImplantSource/Agent/Agent/x64/Debug/BreadSlice.tlog/: BreadSlice.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplantSource/Agent/Agent/x64/Release/: Agent.exe.recipe  Agent.iobj  Agent.ipdb  Agent.vcxproj.FileListAbsolute.txt  Agent.vcxproj.cppwinrt_comp.rsp
ImplantSource/Agent/Agent/x64/Release/Agent.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplantSource/Agent/KeyDecryptor/: KeyDecryptor.cpp  KeyDecryptor.vcxproj  KeyDecryptor.vcxproj.filters
ImplantSource/Agent/KeyDecryptor/x64/Debug/: KeyDecryptor.exe.recipe  KeyDecryptor.ilk  vc143.idb
ImplantSource/Agent/KeyDecryptor/x64/Debug/KeyDecryptor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  KeyDecryptor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplantSource/Agent/KeyDecryptor/x64/Release/: KeyDecryptor.exe.recipe  KeyDecryptor.iobj  KeyDecryptor.ipdb
ImplantSource/Agent/KeyDecryptor/x64/Release/KeyDecryptor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplantSource/Agent/PayloadDecryptor/: PayloadDecryptor.cpp  PayloadDecryptor.vcxproj  PayloadDecryptor.vcxproj.filters
ImplantSource/Agent/PayloadDecryptor/x64/Debug/: PayloadDecryptor.exe.recipe  PayloadDecryptor.ilk  vc143.idb
ImplantSource/Agent/PayloadDecryptor/x64/Debug/PayloadDecryptor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplantSource/Agent/PayloadDecryptor/x64/Release/: PayloadDecrypter.exe.recipe  PayloadDecrypter.iobj  PayloadDecrypter.ipdb  PayloadDecryptor.exe.recipe  PayloadDecryptor.iobj  PayloadDecryptor.ipdb
ImplantSource/Agent/PayloadDecryptor/x64/Release/PayloadDecrypter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplantSource/Agent/PayloadDecryptor/x64/Release/PayloadDecryptor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PayloadDecryptor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ImplantSource/Agent/headers/Crypt/: Crypto.h
ImplantSource/Agent/headers/Crypt/wolfssl/opensssl/: compat_types.h
ImplantSource/Agent/headers/Crypt/wolfssl/wolfcrypt/: aes.h  asn.h  asn_public.h  coding.h  cpuid.h  cryptocb.h  des3.h  dh.h  dsa.h  error-crypt.h  hash.h  hmac.h  hpke.h  logging.h  md2.h  md5.h  misc.h  pkcs12.h  pwdbased.h  random.h  rc2.h  rsa.h  settings.h  sha.h  sha256.h  sp_int.h  types.h  wc_encrypt.h  wc_port.h  wolfmath.h
ImplantSource/Agent/headers/Crypt/wolfssl/wolfssl/: callbacks.h
ImplantSource/Agent/headers/agent/: agent.h
ImplantSource/Agent/headers/agent/common/: Common.h
ImplantSource/Agent/headers/agent/evasion/: Common.h
ImplantSource/Agent/headers/agent/evasion/PeParsing/: evasive.h
ImplantSource/Agent/headers/agent/evasion/SleepObfu/: EkkoSleepObf.h  RetAddrSpoof.h  SleepObfMain.h
ImplantSource/Agent/headers/cstdreplacement/: localcstd.h
ImplantSource/Agent/headers/enumeration/: enum.h  token.h
ImplantSource/Agent/headers/helpers/: ListManager.h  parser.h  win32.h
ImplantSource/Agent/headers/http/: Http.h
ImplantSource/Agent/headers/package/: package.h
ImplantSource/Agent/headers/taskcontroller/: Task.h  TaskController.h
ImplantSource/Agent/src/TaskController/: Task.c  TaskController.c
ImplantSource/Agent/src/agent/: RegisterAgent.c  agent.c  init.c
ImplantSource/Agent/src/agent/evasion/: common.c
ImplantSource/Agent/src/crypt/: Crypto.c
ImplantSource/Agent/src/crypt/wolfssl/: aes.c  asn.c  coding.c  cryptocb.c  des3.c  dh.c  dsa.c  error.c  hash.c  hmac.c  logging.c  md2.c  md5.c  memory.c  misc.c  pkcs12.c  pwdbased.c  random.c  rc2.c  rsa.c  sha.c  sha256.c  sp_int.c  wc_encrypt.c  wc_port.c  wolfmath.c
ImplantSource/Agent/src/cstdreplacement/: localcstd.c
ImplantSource/Agent/src/enumeration/: enum.c  token.c
ImplantSource/Agent/src/helpers/: ListManager.c  parser.c  win32.c
ImplantSource/Agent/src/http/: Http.c
ImplantSource/Agent/src/package/: package.c
ImplantSource/SilentMoonWalk/: CMakeLists.txt  SilentMoonwalk.cpp
(+208 files in other folders)
